--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% import "bootstrap/wtf.html" as wtf %} {% block
 page_content%}
 <div class="page-header">
-  <h1>Hello, {% if name %} {{ name }} {% else %} Stranger {% endif %}!</h1>
+  <h1>Hello, {% if name %} {{ name }} {% else %} Stranger {% endif %}! Welcome to Lab3 Docker!</h1>
   <h1>
     {% if email %}
         {% if valid_email %}
